# olist-analytics-engineering

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
dashboard/: app.py
data/: README.md
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: _marts__models.yml  dim_customers.sql  dim_date.sql  dim_products.sql  fct_order_items.sql  mart_category_performance.sql  mart_delivery_performance.sql  mart_monthly_revenue.sql
dbt/models/staging/: _staging__models.yml  _staging__sources.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_payments.sql  stg_products.sql
dbt/tests/: assert_delivered_orders_have_delivery_date.sql  assert_no_negative_prices.sql
docker/: Dockerfile
docs/: architecture.md
src/: __init__.py  config.py  export_metrics.py  ingest.py  load_raw.py  logger.py
tests/: test_export_metrics.py  test_ingest_and_load.py  test_marts.py
